--- a/lesson_17/css/fonts.css
+++ b/lesson_17/css/fonts.css
@@ -11,25 +11,17 @@
 */
 
 @font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-regular.woff2") format("woff2");
+	font-family: "KoPub Batang";
+	src: url("../fonts/KoPubBatang-Light.woff2") format("woff2");
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "KoPub Batang";
+	src: url("../fonts/KoPubBatang-Regular.woff2") format("woff2");
 	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-bold.woff2") format("woff2");
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-black.woff2") format("woff2");
-	font-weight: 900;
 	font-style: normal;
 	font-display: swap;
 }
